# novapolis-suite

./: .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .markdownlintignore  .snapshot.now  DONELOG.md  LICENSE  PR_DESCRIPTION.md  README.md  TODO.md  WORKSPACE_INDEX.md  WORKSPACE_STATUS.md  combined.json  copilot-instructions-update-tode.md  cvn-agend-novapolis-rp-workspace.code-workspace  lint.out  md003_scan.out  novapolis-suite.code-workspace  novapolis.code-workspace  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  single-root-todo.md  terminal output  todo.root.md  workspace_tree.txt  workspace_tree_dirs.txt
novapolis_agent/: .env.example  .gitignore  .markdownlint.json  README.md  WORKSPACE_INDEX.md  WORKSPACE_INDEX.md.bak.linkscan  __init__.py  analysis_chat_routers.md  cleanup_recommendations.md  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  run_server.py  test_settings.py
novapolis_agent/.devcontainer/: Dockerfile  devcontainer.json
novapolis_agent/.githooks/: pre-commit
novapolis_agent/.github/: ci-ping.txt
novapolis_agent/agents/: __init__.py
novapolis_agent/app/: __init__.py  main.py
novapolis_agent/docs/: AGENT_BEHAVIOR.md  ARCHIVE_PLAN.md  CONTEXT_ARCH.md  DONELOG.txt  REPORTS.md  TODO.md  customization.md  training.md
novapolis_agent/eval/: .gitignore  DEPRECATIONS.md  README.md  eval-21-40_fantasy_v1.0.jsonl
novapolis_agent/examples/: unrestricted_prompt_example.txt
novapolis_agent/novapolis_agent/: __init__.py
novapolis_agent/scripts/: README.md  append_done.py  audit_workspace.py  check_openai_key.py  cleanup_phase3.ps1  curate_dataset_from_latest.py  customize_prompts.py  dependency_check.py  estimate_tokens.py  eval_loader.py  eval_ui.py  export_finetune.py  fine_tune_pipeline.py  fix_donelog_times.py  generate_eval_dataset.py  map_reduce_summary.py  map_reduce_summary_llm.py  migrate_dataset_schemas.py  open_context_notes.py  open_latest_summary.py  openai_finetune.py  openai_ft_status.py  prepare_finetune_pack.py  quick_eval.py  rag_indexer.py  rerun_failed.py  rerun_from_results.py  run_eval.py  run_tests.py  smoke_asgi.py  summarize_eval_results.py  syn_loader.py  todo_gather.py  train_lora.py
novapolis_agent/tests/: test_api_chat_internal_branches.py  test_api_health.py  test_api_sim_state.py  test_app_404_request_id.py  test_app_chat_post_error.py  test_app_chat_post_happy.py  test_app_chat_post_internal_error.py  (+106 more)
(+1150 files in other folders)
