[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-openai-eval"
version = "0.1.0"
description = "Lokaler MCP-Server-Prototyp für OpenAI Evaluationsdaten"
authors = [{ name = "Novapolis Dev Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
develop = [
    "ruff>=0.6.0"
]

[project.scripts]
mcp-openai-eval = "mcp_openai_eval.server:main"

[tool.setuptools.packages.find]
where = ["src"]